--- a/src/java/sobrenos.html
+++ b/src/java/sobrenos.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosso Projeto - m.i.n.a</title>
-    <link rel="stylesheet" href="./sobrenos.css">
+    <link rel="stylesheet" href="sobrenos.css">
     </head>
 <body>
     <header class="header">
         <div class="logo">
-            <img src="./logomina-removebg-preview.png" alt="Logo M.I.N.A" class="logo">
+            <img src="logomina-removebg-preview.png" alt="Logo M.I.N.A" class="logo">
         </div>
     </header>
 
@@ -23,17 +23,17 @@
             <h2>Integrantes</h2>
             <div class="integrantes-list">
                 <div class="integrante-card">
-                    <img src="./carol.png" alt="Foto de Carol">
+                    <img src="carol.png" alt="Foto de Carol">
                     <p class="nome">Carol</p>
                     <p class="cargo">Desenvolvedor</p>
                 </div>
                 <div class="integrante-card">
-                    <img src="./marih.png" alt="Foto de Maria">
+                    <img src="marih.png" alt="Foto de Maria">
                     <p class="nome">Maria</p>
                     <p class="cargo">Designer</p>
                 </div>
                 <div class="integrante-card">
-                    <img src="./rayka.png" alt="Foto de Rayka">
+                    <img src="rayka.png" alt="Foto de Rayka">
                     <p class="nome">Rayka</p>
                     <p class="cargo">Gerente</p>
                 </div>
