--- a/Integração com o DB/src/main/java/telaaluno.html
+++ b/Integração com o DB/src/main/java/telaaluno.html
@@ -3,20 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Atividades - Professor</title>
-    <link rel="stylesheet" href="./telaprof.css">
+    <title>Página de Atividades - Aluno</title>
+    <link rel="stylesheet" href="telaaluno.css">
 </head>
 <body>
     <div class="container">
         <div class="column-esquerda">
             <h1>Olá! Mina</h1>
-            <p>Professor</p>
-            <button class="logout"><a href="./telainicial.html">Sair</a></button>
+            <p>Aluno</p>
+            <button class="logout"><a href="telainicial.html">Sair</a></button>
         </div>
+
+
         <div class="main-content">
-            <div class="header">
-                <button class="add-atividade"><a href="#">Adicionar Atividade</a></button>
-            </div>
             <div class="atividade">
                 <div class="atividade-card">
                     <div class="icon">+</div>
@@ -32,8 +31,7 @@
                 </div>
             </div>
         </div>
+        <a href="/listar">Listar atividades</a>
     </div>
 </body>
 </html>
-
-
