--- a/src/java/cadastro.html
+++ b/src/java/cadastro.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bem-vindo</title>
-    <link rel="stylesheet" href="./cadastro.css">
+    <link rel="stylesheet" href="cadastro.css">
    
    
 </head>
@@ -21,9 +21,9 @@
         <div class="secondcolumncadastro">
             <h5 class="title">Siga-nos nas Redes Sociais!</h5>
             <div class="image-container">
-                <img src="./icon face.png" alt="Facebook" class="circle-image">
-                <img src="./icon insta.png" alt="Instagram" class="circle-image">
-                <img src="./icon linkedin.png" alt="Linkedin" class="circle-image">
+                <img src="icon face.png" alt="Facebook" class="circle-image">
+                <img src="icon insta.png" alt="Instagram" class="circle-image">
+                <img src="icon linkedin.png" alt="Linkedin" class="circle-image">
             </div>
 
             <p class="segundadescription">Adicione seus dados para o registro:</p>
