--- a/src/java/telaprof.html
+++ b/src/java/telaprof.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Atividades - Aluno</title>
-    <link rel="stylesheet" href="./telaaluno.css">
+    <title>Página de Atividades - Professor</title>
+    <link rel="stylesheet" href="telaprof.css">
 </head>
 <body>
     <div class="container">
         <div class="column-esquerda">
             <h1>Olá! Mina</h1>
-            <p>Aluno</p>
-            <button class="logout"><a href="./telainicial.html">Sair</a></button>
+            <p>Professor</p>
+            <button class="logout"><a href="telainicial.html">Sair</a></button>
         </div>
-
-
         <div class="main-content">
+            <div class="header">
+                <button class="add-atividade"><a href="#">Adicionar Atividade</a></button>
+            </div>
             <div class="atividade">
                 <div class="atividade-card">
                     <div class="icon">+</div>
@@ -34,3 +35,5 @@
     </div>
 </body>
 </html>
+
+
