--- a/Integração com o DB/src/main/java/cadastrar.html
+++ b/Integração com o DB/src/main/java/cadastrar.html
@@ -35,6 +35,7 @@
             </form>
 
             <button id="voltar-bloco" class="btn-voltar">Voltar</button>
+            <a href="telaprof.html"></a>
         </div>
     </div>
 </body>
