--- a/Integração com o DB/src/main/java/telaaluno.html
+++ b/Integração com o DB/src/main/java/telaaluno.html
@@ -19,19 +19,10 @@
             <div class="atividade">
                 <div class="atividade-card">
                     <div class="icon">+</div>
-                    <p>Lição de Matemática</p>
-                </div>
-                <div class="atividade-card">
-                    <div class="icon">+</div>
-                    <p>Lição de Português</p>
-                </div>
-                <div class="atividade-card">
-                    <div class="icon">+</div>
-                    <p>Lição de Inglês</p>
+                    <button><a href="/listar">Listar Atividades</a></button>
                 </div>
             </div>
         </div>
-        <a href="/listar">Listar atividades</a>
     </div>
 </body>
 </html>
