--- a/Integração com o DB/src/main/java/telaprof.html
+++ b/Integração com o DB/src/main/java/telaprof.html
@@ -20,15 +20,8 @@
             <div class="atividade">
                 <div class="atividade-card">
                     <div class="icon">+</div>
-                    <p>Lição de Matemática</p>
+                    <button><a href="/listar">Listar Atividades</a></button>
                 </div>
-                <div class="atividade-card">
-                    <div class="icon">+</div>
-                    <p>Lição de Português</p>
-                </div>
-                <div class="atividade-card">
-                    <div class="icon">+</div>
-                    <p>Lição de Inglês</p>
                 </div>
             </div>
         </div>
