--- a/Integração com o DB/src/main/java/sobrenos.html
+++ b/Integração com o DB/src/main/java/sobrenos.html
@@ -9,7 +9,7 @@
 <body>
     <header class="header">
         <div class="logo">
-            <img src="logomina-removebg-preview.png" alt="Logo M.I.N.A" class="logo">
+            <img src="/logomina-removebg-preview.png" alt="Logo M.I.N.A" class="logo">
         </div>
     </header>
 
@@ -23,17 +23,17 @@
             <h2>Integrantes</h2>
             <div class="integrantes-list">
                 <div class="integrante-card">
-                    <img src="carol.png" alt="Foto de Carol">
+                    <img src="/carol.png" alt="Foto de Carol">
                     <p class="nome">Carol</p>
                     <p class="cargo">Desenvolvedor</p>
                 </div>
                 <div class="integrante-card">
-                    <img src="marih.png" alt="Foto de Maria">
+                    <img src="/marih.png" alt="Foto de Maria">
                     <p class="nome">Maria</p>
                     <p class="cargo">Designer</p>
                 </div>
                 <div class="integrante-card">
-                    <img src="rayka.png" alt="Foto de Rayka">
+                    <img src="/rayka.png" alt="Foto de Rayka">
                     <p class="nome">Rayka</p>
                     <p class="cargo">Gerente</p>
                 </div>
